Refactor bean scope of ldap server list and server edit view.

--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -141,7 +141,7 @@
                             <p:selectOneMenu id="ldapServer" converter="#{ldapServerConverter}"
                                              value="#{LdapGroupForm.myLdapGruppe.ldapServer}">
                                 <f:selectItem itemValue="#{null}" itemLabel="-- #{msgs.notSelected} --" noSelectionOption="true"/>
-                                <f:selectItems value="#{LdapServerForm.ldapServers}" var="ldapServer"
+                                <f:selectItems value="#{LdapServerEditView.ldapServers}" var="ldapServer"
                                                itemValue="#{ldapServer}" itemLabel="#{ldapServer.title}"/>
                                 <p:ajax event="change" oncomplete="toggleSave()"/>
                             </p:selectOneMenu>
