--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -28,7 +28,7 @@
         <f:viewAction action="#{ClientForm.resetPaginator(keepPagination)}" />
         <f:viewAction action="#{AuthorityForm.resetPaginator(keepPagination)}" />
         <f:viewAction action="#{LdapGroupForm.resetPaginator(keepPagination)}" />
-        <f:viewAction action="#{LdapServerForm.resetPaginator(keepPagination)}" />
+        <f:viewAction action="#{LdapServerListView.resetPaginator(keepPagination)}" />
     </f:metadata>
 
     <ui:define name="contentHeader">
@@ -82,7 +82,7 @@
                 <p:menuitem value="#{msgs.newLdapGroup}" id="newLdapGroupButton" action="#{LdapGroupForm.newLdapGroup}"
                             rendered="#{SecurityAccessController.hasAuthorityGlobal('addLdapGroup')}"
                             icon="fa fa-plus"/>
-                <p:menuitem value="#{msgs.newLdapServer}" id="newLdapServerButton" action="#{LdapServerForm.newLdapServer}"
+                <p:menuitem value="#{msgs.newLdapServer}" id="newLdapServerButton" action="#{LdapServerListView.newLdapServer}"
                             rendered="#{SecurityAccessController.hasAuthorityGlobal('addLdapServer')}"
                             icon="fa fa-plus"/>
                 <p:menuitem value="#{msgs.newAuthority}" id="newAuthority" action="#{AuthorityForm.newAuthority}"
